[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Hurt.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Hurt" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Hurt_area_entered"]
[connection signal="invincibility_ended" from="." to="." method="_on_Hurt_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Hurt_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
